<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/et_SignUp_User_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/et_SignUp_User_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_SignUp_User_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_SignUp_User_Cnic_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/cnic_number"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_SignUp_User_Car_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/car_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_SignUp_User_car_license_plate_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/car_license_plate_number"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_SignUp_User"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="25dp"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
