<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtYourBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/your_bookings"
        android:textSize="20sp"
        android:textColor="#c4c4c4"
        android:gravity="center"/>

    <TextView
        android:id="@+id/root_ListView_User_EmptyError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/you_haven_t_booked_any_parking"
        android:textColor="#d9d9d9"
        android:textSize="17sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/root_ListView_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_User_BookNow"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtYourBooking"
        android:layout_marginTop="3dp"
        android:divider="@null"
        android:dividerHeight="0dp"/>

    <Button
        android:id="@+id/btn_User_BookNow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/book_now"
        android:textAllCaps="false" />
</RelativeLayout>

